--- a/partials/api/apDataService.getFieldVersionHistory.html
+++ b/partials/api/apDataService.getFieldVersionHistory.html
@@ -13,7 +13,7 @@
 var options = {
        operation: 'GetVersionCollection',
        webURL: apConfig.defaultUrl,
-       strlistID: model.list.guid,
+       strlistID: model.list.getListId(),
        strlistItemID: listItem.id,
        strFieldName: fieldDefinition.internalName
    };
