--- a/partials/api/Model.getCachedEntities.html
+++ b/partials/api/Model.getCachedEntities.html
@@ -4,7 +4,7 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="model-getcachedentities-page"><p>Returns all entities registered for this model regardless of which query it can be found in.</p>
+<div class="description"><div class="model-getcachedentities-page"><p>Returns all entities registered for this model regardless of query.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">getCachedEntities();</pre>
