--- a/partials/api/angularPoint.IndexedCache.html
+++ b/partials/api/angularPoint.IndexedCache.html
@@ -45,7 +45,7 @@ apIndexedCacheFactory.</p>
 </li>
 <li><h3 id="methods_removeentity">removeEntity(entity)</h3>
 <div class="removeentity"><div class="angularpoint-indexedcache-page angularpoint-indexedcache-removeentity-page"><p>Removes an entity from the cache.</p>
-</div><h5 id="methods_removeentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entity</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-indexedcache-page angularpoint-indexedcache-removeentity-page"><p>Entity to remove.</p>
+</div><h5 id="methods_removeentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entity</td><td><a href="" class="label type-hint type-hint-object">object</a><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-indexedcache-page angularpoint-indexedcache-removeentity-page"><p>Entity to remove or ID of entity to be removed.</p>
 </div></td></tr></tbody></table></div>
 </li>
 <li><h3 id="methods_toarray">toArray()</h3>
