--- a/partials/api/angularPoint.apCacheService.html
+++ b/partials/api/angularPoint.apCacheService.html
@@ -8,42 +8,48 @@
 resolve once a requested list item is registered in the future.</p>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_getcachedentities">getCachedEntities(entityType)</h3>
+<ul class="methods"><li><h3 id="methods_deleteentity">deleteEntity(listId, entityId)</h3>
+<div class="deleteentity"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-deleteentity-page"><p>Deletes all references to an entity.</p>
+</div><h5 id="methods_deleteentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>listId</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-deleteentity-page"><p>GUID for list the list item belongs to.</p>
+</div></td></tr><tr><td>entityId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-deleteentity-page"><p>The entity.id.</p>
+</div></td></tr></tbody></table></div>
+</li>
+<li><h3 id="methods_getcachedentities">getCachedEntities(listId)</h3>
 <div class="getcachedentities"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentities-page"><p>Returns all entities for a given model as an indexed cache with keys being the entity id&#39;s.</p>
-</div><h5 id="methods_getcachedentities_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentities-page"><p>GUID for list the list item belongs to.</p>
+</div><h5 id="methods_getcachedentities_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>listId</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentities-page"><p>GUID for list the list item belongs to.</p>
 </div></td></tr></tbody></table><h5 id="methods_getcachedentities_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentities-page"><p>Indexed cache containing all entities for a model.</p>
 </div></td></tr></table></div>
 </li>
-<li><h3 id="methods_getcachedentity">getCachedEntity(entityType, entityId)</h3>
+<li><h3 id="methods_getcachedentity">getCachedEntity(listId, entityId)</h3>
 <div class="getcachedentity"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>Synchronise call to return a cached entity;</p>
-</div><h5 id="methods_getcachedentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>GUID for list the list item belongs to.</p>
+</div><h5 id="methods_getcachedentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>listId</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>GUID for list the list item belongs to.</p>
 </div></td></tr><tr><td>entityId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>The entity.id.</p>
 </div></td></tr></tbody></table><h5 id="methods_getcachedentity_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>entity || undefined</p>
 </div></td></tr></table></div>
 </li>
-<li><h3 id="methods_getentity">getEntity(entityType, entityId)</h3>
+<li><h3 id="methods_getentity">getEntity(listId, entityId)</h3>
 <div class="getentity"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentity-page"><p>Returns a deferred object that resolves with the requested entity immediately if already present or at some
 point in the future assuming the entity is eventually registered.</p>
-</div><h5 id="methods_getentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentity-page"><p>GUID for list the list item belongs to.</p>
+</div><h5 id="methods_getentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>listId</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentity-page"><p>GUID for list the list item belongs to.</p>
 </div></td></tr><tr><td>entityId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentity-page"><p>The entity.id.</p>
 </div></td></tr></tbody></table><h5 id="methods_getentity_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-promise">promise</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentity-page"><p>entity</p>
 </div></td></tr></table></div>
 </li>
-<li><h3 id="methods_getentitytypebyname">getEntityTypeByName(name)</h3>
-<div class="getentitytypebyname"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>Allows us to lookup an entity cache using the name of the list instead of the GUID.</p>
-</div><h5 id="methods_getentitytypebyname_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>name</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>The name of the list.</p>
-</div></td></tr></tbody></table><h5 id="methods_getentitytypebyname_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>GUID for the list.</p>
+<li><h3 id="methods_getlistid">getListId(keyString)</h3>
+<div class="getlistid"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getlistid-page"><p>Allows us to use either the List Name or the list GUID and returns the lowercase GUID</p>
+</div><h5 id="methods_getlistid_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>keyString</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getlistid-page"><p>List GUID or name.</p>
+</div></td></tr></tbody></table><h5 id="methods_getlistid_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getlistid-page"><p>Lowercase list GUID.</p>
 </div></td></tr></table></div>
 </li>
-<li><h3 id="methods_getentitytypebyname">getEntityTypeByName(keyString)</h3>
-<div class="getentitytypebyname"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>Allows us to use either the List Name or the list GUID and returns the lowercase GUID</p>
-</div><h5 id="methods_getentitytypebyname_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>keyString</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>List GUID or name.</p>
-</div></td></tr></tbody></table><h5 id="methods_getentitytypebyname_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>Lowercase list GUID.</p>
+<li><h3 id="methods_getlistidfromlistname">getListIdFromListName(name)</h3>
+<div class="getlistidfromlistname"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getlistidfromlistname-page"><p>Allows us to lookup an entity cache using the name of the list instead of the GUID.</p>
+</div><h5 id="methods_getlistidfromlistname_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>name</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getlistidfromlistname-page"><p>The name of the list.</p>
+</div></td></tr></tbody></table><h5 id="methods_getlistidfromlistname_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getlistidfromlistname-page"><p>GUID for the list.</p>
 </div></td></tr></table></div>
 </li>
-<li><h3 id="methods_getmodel">getModel(entityType)</h3>
+<li><h3 id="methods_getmodel">getModel(listId)</h3>
 <div class="getmodel"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getmodel-page"><p>Allows us to retrieve a reference to a given model by either the list title or list GUID.</p>
-</div><h5 id="methods_getmodel_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getmodel-page"><p>List title or list GUID.</p>
+</div><h5 id="methods_getmodel_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>listId</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getmodel-page"><p>List title or list GUID.</p>
 </div></td></tr></tbody></table><h5 id="methods_getmodel_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getmodel-page"><p>A reference to the requested model.</p>
 </div></td></tr></table></div>
 </li>
@@ -61,9 +67,9 @@ the entity id&#39;s and value being a EntityContainer.  The entity is stored at 
 </div><h5 id="methods_registermodel_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>model</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-registermodel-page"><p>Model to create the cache for.</p>
 </div></td></tr></tbody></table></div>
 </li>
-<li><h3 id="methods_removeentity">removeEntity(entityType, entityId)</h3>
+<li><h3 id="methods_removeentity">removeEntity(listId, entityId)</h3>
 <div class="removeentity"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-removeentity-page"><p>Removes the entity from the local entity cache.</p>
-</div><h5 id="methods_removeentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-removeentity-page"><p>GUID for list the list item belongs to.</p>
+</div><h5 id="methods_removeentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>listId</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-removeentity-page"><p>GUID for list the list item belongs to.</p>
 </div></td></tr><tr><td>entityId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-removeentity-page"><p>The entity.id.</p>
 </div></td></tr></tbody></table></div>
 </li>
