--- a/partials/api/angularPoint.IndexedCache.html
+++ b/partials/api/angularPoint.IndexedCache.html
@@ -7,6 +7,10 @@
 <div class="description"><div class="angularpoint-indexedcache-page"><p>Cache constructor that is extended to make it easier to work with via prototype methods.  Located in
 apIndexedCacheFactory.</p>
 </div></div>
+<h2 id="usage">Usage</h2>
+<div class="usage"><pre class="prettyprint linenums">IndexedCache([object]);</pre>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>[object]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-indexedcache-page"><p>Optionally extend new cache with provided object.</p>
+</div></td></tr></tbody></table></div>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_addentity">addEntity(entity)</h3>
 <div class="addentity"><div class="angularpoint-indexedcache-page angularpoint-indexedcache-addentity-page"><p>Adds a new key to the cache if not already there with a value of the new entity.</p>
