--- a/partials/api/angularPoint.SPServices.html
+++ b/partials/api/angularPoint.SPServices.html
@@ -4,7 +4,8 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="angularpoint-spservices-page"><p>This is just a trimmed down version of Marc Anderson&#39;s awesome SPServices library.  We&#39;re primarily looking for
-the ability to create the SOAP envelope and let AngularJS&#39;s $http service handle all negotiation with the server.</p>
+<div class="description"><div class="angularpoint-spservices-page"><p>This is just a trimmed down version of Marc Anderson&#39;s awesome <a href="http://spservices.codeplex.com/">SPServices</a> library.
+We&#39;re primarily looking for the ability to create the SOAP envelope and let AngularJS&#39;s $http service handle all
+communication with the server.</p>
 </div></div>
 </div>
