--- a/partials/api/List.html
+++ b/partials/api/List.html
@@ -19,31 +19,31 @@ See <a href="#/api/List.FieldDefinition">List.customFields</a> for additional in
 <pre class="prettyprint linenums">
 [
   {
-      internalName: "Title",
+      staticName: "Title",
       objectType: "Text",
       mappedName: "lastName",
       readOnly:false
   },
   {
-      internalName: "FirstName",
+      staticName: "FirstName",
       objectType: "Text",
       mappedName: "firstName",
       readOnly:false
   },
   {
-      internalName: "Organization",
+      staticName: "Organization",
       objectType: "Lookup",
       mappedName: "organization",
       readOnly:false
   },
   {
-      internalName: "Account",
+      staticName: "Account",
       objectType: "User",
       mappedName: "account",
       readOnly:false
   },
   {
-      internalName: "Details",
+      staticName: "Details",
       objectType: "Text",
       mappedName: "details",
       readOnly:false
