--- a/partials/api/angularPoint.apUtilityService.html
+++ b/partials/api/angularPoint.apUtilityService.html
@@ -131,6 +131,12 @@ perm = {
 </div></div>
 </div>
 </li>
+<li><h3 id="methods_stringifyxml">stringifyXML(xml)</h3>
+<div class="stringifyxml"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifyxml-page"><p>Simple utility to convert an XML object into a string and remove unnecessary whitespace.</p>
+</div><h5 id="methods_stringifyxml_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>xml</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifyxml-page"><p>XML object.</p>
+</div></td></tr></tbody></table><h5 id="methods_stringifyxml_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifyxml-page"><p>Stringified version of the XML object.</p>
+</div></td></tr></table></div>
+</li>
 <li><h3 id="methods_yyyymmdd">yyyymmdd()</h3>
 <div class="yyyymmdd"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-yyyymmdd-page"><p>Convert date into a int formatted as yyyymmdd
 We don&#39;t need the time portion of comparison so an int makes this easier to evaluate</p>
