--- a/partials/api/apDataService.getFieldVersionHistory.html
+++ b/partials/api/apDataService.getFieldVersionHistory.html
@@ -15,7 +15,7 @@ var options = {
        webURL: apConfig.defaultUrl,
        strlistID: model.list.getListId(),
        strlistItemID: listItem.id,
-       strFieldName: fieldDefinition.internalName
+       strFieldName: fieldDefinition.staticName
    };
 </pre>
 </div></td></tr><tr><td>fieldDefinition</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-getfieldversionhistory-page"><p>Field definition object from the model.</p>
