--- a/partials/api/apDataService.requestData.html
+++ b/partials/api/apDataService.requestData.html
@@ -8,9 +8,8 @@
 intended to be called directly.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">requestData(opts, additionalArgs);</pre>
+<div class="usage"><pre class="prettyprint linenums">requestData(opts);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>opts</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-requestdata-page"><p>Payload object containing the details of the request.</p>
-</div></td></tr><tr><td>additionalArgs</td><td><a href="" class="label type-hint type-hint-array">array</a></td><td><div class="apdataservice-requestdata-page"><p>Optional parameters to pass to the mock service when working offline.</p>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-promise">promise</a></td><td><div class="apdataservice-requestdata-page"><p>Promise that resolves with the server response.</p>
 </div></td></tr></table></div>
 </div>
