--- a/partials/api/ListItem.saveFields.html
+++ b/partials/api/ListItem.saveFields.html
@@ -9,7 +9,8 @@ Alternative to saving all fields</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">saveFields(fieldArray, [options]);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>fieldArray</td><td><a href="" class="label type-hint type-hint-array">array</a></td><td><div class="listitem-savefields-page"><p>Array of internal field names that should be saved to SharePoint.</p>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>fieldArray</td><td><a href="" class="label type-hint type-hint-array">array</a><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="listitem-savefields-page"><p>Array of internal field names that should be saved to SharePoint or a single
+string to save an individual field.</p>
 </div></td></tr><tr><td>[options]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="listitem-savefields-page"><p>Optionally pass params to the data service.</p>
 </div></td></tr><tr><td>options.updateAllCaches</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="listitem-savefields-page"><p>Search through the cache for each query to ensure entity is
 updated everywhere.  This is more process intensive so by default we only update the cached entity in the
