--- a/docs/partials/api/Model.html
+++ b/docs/partials/api/Model.html
@@ -49,55 +49,55 @@ var model = new apModelFactory.Model({
         title: 'Projects',
         customFields: [
             {
-               internalName: 'Title',
+               staticName: 'Title',
                objectType: 'Text',
                mappedName: 'title',
                readOnly: false
             },
             {
-               internalName: 'Customer',
+               staticName: 'Customer',
                objectType: 'Lookup',
                mappedName: 'customer',
                readOnly: false
             },
             {
-               internalName: 'ProjectDescription',
+               staticName: 'ProjectDescription',
                objectType: 'Text',
                mappedName: 'projectDescription',
                readOnly: false
             },
             {
-               internalName: 'Status',
+               staticName: 'Status',
                objectType: 'Text',
                mappedName: 'status',
                readOnly: false
             },
             {
-               internalName: 'TaskManager',
+               staticName: 'TaskManager',
                objectType: 'User',
                mappedName: 'taskManager',
                readOnly: false
             },
             {
-               internalName: 'ProjectGroup',
+               staticName: 'ProjectGroup',
                objectType: 'Lookup',
                mappedName: 'group',
                readOnly: false
             },
             {
-               internalName: 'CostEstimate',
+               staticName: 'CostEstimate',
                objectType: 'Currency',
                mappedName: 'costEstimate',
                readOnly: false
             },
             {
-               internalName: 'Active',
+               staticName: 'Active',
                objectType: 'Boolean',
                mappedName: 'active',
                readOnly: false
             },
             {
-               internalName: 'Attachments',
+               staticName: 'Attachments',
                objectType: 'Attachments',
                mappedName: 'attachments',
                readOnly: true
