Redirect to appropriate call when attempting to saveChanges of an entity that hasn't initially been saved to the server.

--- a/docs/partials/api/ListItem.saveFields.html
+++ b/docs/partials/api/ListItem.saveFields.html
@@ -4,8 +4,7 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="listitem-savefields-page"><p>Saves a named subset of fields back to SharePoint
-Alternative to saving all fields</p>
+<div class="description"><div class="listitem-savefields-page"><p>Saves a named subset of fields back to SharePoint.  This is an alternative to saving all fields.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">saveFields(fieldArray, [options]);</pre>
